--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,20 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+  <link rel="stylesheet" type="text/css"  href="https://cdn.jsdelivr.net/npm/lightgallery@1.6.1/dist/css/lightgallery.min.css">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  
+  
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   
-  <script src="http://code.jquery.com/jquery.min.js"></script>
+  <script src="//code.jquery.com/jquery.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/lightgallery@1.6.1/dist/js/lightgallery.min.js"></script>
+  
+  <script type="text/javascript">
+      $(document).ready(function() {
+          $("#lightgallery").lightGallery(); 
+      });
+  </script>
   
 </head>
