--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,428 +1,95 @@
-
-.all-content-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  
-  background-image:  url('/img/slide9.JPG');
-  background-size:   cover;
-  background-repeat: no-repeat;
-  background-position: top center;   
-  
-  img {
-    display: none;
-    min-height: 100%;
-    min-width: 100%;
-  }
+html {
+  background: black;
 }
-
-/**
- * Site header
- */
-.site-header, .fader, {
-    
-    position: fixed;
-    top:0;
-    height: $header-desktop-height;
+body {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 1400px;
+  background: $background-color;
+  color: $text-color;
+  @media (max-width: 900px) { 
+    width: 90%;
+  }
+  @media (max-width: 600px) { 
     width: 100%;
-    z-index: 100;
+  }
+  head {
+    image {
+      width: 100%;
+      height: auto;
+    }
+  }
+  
+  ul {
+    padding: 0 $spacing-unit / 2;
+    margin: 1em $spacing-unit / 2;
+    overflow: hidden;
+    li {
+      list-style: none;
+      padding: 0 $spacing-unit / 2;
+      margin: 0 0 .5 * $base-line-height;
+      position: relative;
+      float: left;
+      width: 50%;
+      @media (max-width: 600px) { 
+        float: none;
+        width: 100%;
+      }
+      &:before {
+        content: "•";
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+  }
+  
+  .columns {
+    overflow: hidden;
+  }
+  .col {
+    float: left;
+    width: 50%;
+    @media (max-width: 600px) { 
+      float: none;
+      width: 100%;
+    }
+    
+    ul li {
+      float: none;
+      width: 100%;
+    }
+  }
+  
+  #lightgallery {
+    padding: 0 $spacing-unit / 2;
     &:after {
       content: "";
-      background: url('/img/slide9.JPG');
-      background-size: 100% auto;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 1;
-      z-index: -1;
+      clear: both;
+      display: table;
     }
-
-    
-    #days-left {
-        display: none;
-        font-size: 24px;
-        text-align: center;
-        margin: .25em auto;
-        line-height: 1em;
-        height: 1em;
-        color: black;
-        span#days-left-count {
-            font-weight: bold;
-            color: $w-dark-blue;
-        }
-    }
-    
-    @include media-query($on-palm) {
-      height: $header-mobile-height;
-      #days-left {
-          font-size: 20px;
-          text-align: left;
-          margin: .25em 0;
-          padding-right: 15px;
-          padding-left: 15px;
-          span#days-left-count {
-          }
-      }
-    }
-    
-    
-}
-.fader {
-  z-index: 99;
-  opacity: 0.3;
-  &#fader-1  { height: $header-desktop-height + 1px; }
-  &#fader-2  { height: $header-desktop-height + 2px; }
-  &#fader-3  { height: $header-desktop-height + 3px; }
-  &#fader-4  { height: $header-desktop-height + 4px; }
-  &#fader-5  { height: $header-desktop-height + 5px; }
-  &#fader-6  { height: $header-desktop-height + 6px; }
-  &#fader-7  { height: $header-desktop-height + 7px; }
-  &#fader-8  { height: $header-desktop-height + 8px; }
-  &#fader-9  { height: $header-desktop-height + 9px; }
-  &#fader-10 { height: $header-desktop-height + 10px; }
-  @include media-query($on-palm) {
-    &#fader-1 { height: $header-mobile-height + 1px; }
-    &#fader-2 { height: $header-mobile-height + 2px; }
-    &#fader-3 { height: $header-mobile-height + 3px; }
-    &#fader-4 { height: $header-mobile-height + 4px; }
-    &#fader-5 { height: $header-mobile-height + 5px;  }
-    &#fader-6 { height: $header-mobile-height + 6px;  }
-    &#fader-7 { height: $header-mobile-height + 7px;  }
-    &#fader-8 { height: $header-mobile-height + 8px;  }
-    &#fader-9 { height: $header-mobile-height + 9px;  }
-    &#fader-10 {height: $header-mobile-height + 10px; }
-  }
-
-}
-
-.site-title {
-    font-size: 30px;
-    line-height: 56px;
-    margin-bottom: 0;
-    float: none;
-    display: block;
-    text-align: center;
-    font-family: "Amatic SC";
-    font-weight: bold;
-    color: white;
-    &,
-    &:visited {
-        color: white;
-    }
-    @include media-query($on-palm) {
-      font-size: 28px;
-      text-align: left;
-      width: 280px;
-      line-height: 1.2em;
-      text-align: left;
-    }
-}
-
-.site-nav {
-    float: none;
-    line-height: 56px;
-    margin: 0px auto;
-    width: auto;
-    text-align: center;
-    font-family: "Amatic SC";
-    font-weight: bold;
-    font-size: 28px;
-    letter-spacing: 1px;
-    position: relative;
-
-    .menu-icon {
-        display: none;
-    }
-
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
-        &.pinned {
-          color: darken($w-dark-blue, 10%);
-          font-weight: bold;
-        }
-        // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
-        }
-    }
-
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 20px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-med;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 27px;
-            height: 26px;
-            line-height: 0;
-            padding: 10px 9px 0 0px;
-            text-align: right;
-            color: $text-color;
-            span {
-              display: block;
-              float: left;
-              padding-top: 7px;
-            }
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $text-color;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-        }
-    }
-}
-
-
-
-/**
- * Site footer
- */
-.site-footer {
-    border: none;
-    padding: $spacing-unit 0;
-    position: relative;
-}
-
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
-
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-}
-
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color-light;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
-    }
-
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-
-
-/**
- * Page content
- */
-.page-content {
-    position: relative;
-    padding: $spacing-unit 0;
-    
-    margin-top: $header-desktop-height + 20px;
-    @include media-query($on-palm) {
-      margin-top: $header-mobile-height + 20px;
-    }
-
-}
-
-.page-content, .site-footer {
-  z-index: 10;
-}
-
-.post, .footer-content {
-  color: white;      
-  
-  position: relative;
-  z-index: 10;
-  &:after {
-    content: "";
-    position: absolute;
-    opacity: 0.7;
-    margin: -20px -15px;
-    padding: 20px 15px;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    display: block;
-    left: 0;
-    background: #000;
-    z-index: -1;
-  }
-}
-
-.page-heading {
-    font-size: 20px;
-}
-
-.post-list {
-    margin-left: 0;
-    list-style: none;
-
-    > li {
-        margin-bottom: $spacing-unit;
-    }
-}
-
-.post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
-}
-
-.post-link {
-    display: block;
-    font-size: 24px;
-}
-
-
-
-/**
- * Posts
- */
-
-
-.post-header {
-    margin-bottom: $spacing-unit;
-}
-
-h2 {
-    font-size: 42px;
-    letter-spacing: 0px;
-    line-height: 1;
-
-    @include media-query($on-laptop) {
-        font-size: 36px;
-    }
-}
-
-.post-content {
-    margin-bottom: $spacing-unit;
-
-    h2 {
-        font-size: 32px;
-
-        @include media-query($on-laptop) {
-            font-size: 28px;
-        }
-    }
-
-    h3 {
-        font-size: 26px;
-
-        @include media-query($on-laptop) {
-            font-size: 22px;
-        }
-    }
-
-    h4 {
-        font-size: 20px;
-
-        @include media-query($on-laptop) {
-            font-size: 18px;
-        }
-    }
-    
-    
-    .content-with-slideshow {
+    a {
       float: left;
-      width: 55%;
-      padding-right: 5%;
-      @include media-query($on-palm) {
+      width: 50%;
+      height: 300px;
+      overflow: hidden;
+      padding: 0 $spacing-unit / 2;
+      margin: $spacing-unit /2  0;
+      img {
+        object-fit: cover;
         width: 100%;
-        padding-right: 0;
+        height: 100%;
+      }
+      
+      @media (max-width: 900px) { 
+        height: 200px;
+      }
+      @media (max-width: 600px) { 
+        width: 100%;
+        height: auto;
       }
     }
-    #home-slideshow {
-      float: right;
-      width: 40%;
-      margin: 40px 20px;
-      height: 250px;
-      @include media-query($on-palm) {
-        float: none;
-        margin: 20px 0;
-        width: 100%;
-        max-width: 400px;
-        margin: 0px auto;
-      }   
-         
-    }
-    #celeb-slideshow {
-      width: 280px;
-      height: 420px;
-      margin: 20px 0;
-    }
-    #lions-slideshow {
-      max-width: 500px;
-      width: 100%;
-      height: 375px;
-      margin-bottom: 2em;
-    }
-    
-    a.large-link {
-      font-weight: bold;
-      font-size: 20px;
-    }
-    
+  }
+  
 }
