--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,6 +93,11 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: $base-font-size * 2;
   line-height: $base-font-size * 3;
+  text-align: center;
+  @media (max-width: 600px) { 
+    text-align: left;
+  }
+  
 }
 
 h2 {
@@ -104,6 +109,9 @@ h3 {
   font-size: $base-font-size * 1.1;
 }
 
+a, a:visited, a:active {
+  color: blue;
+}
 
 /**
  * text
