update contact section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
           {% endfor %}
         </div>
         
+        <p class='intro'>
+          Interested? Send us a note at <script type="text/javascript">writeEmailLink('mekelhammer', 'gmail')</script>
+        </p>
+        
       </div>
     </div>
 
